# via_praetoria

./: .flake8  LICENSE  Makefile  README.md  README.rst  db.sqlite3  manage.py  pre-commit-config.yaml  pyproject.toml  requirements.txt
auth_app/: admin.py  forms.py  managers.py  models.py  serializers.py  urls.py  views.py
auth_app/migrations/: 0001_initial.py
auth_app/templates/: login.html  register.html
core/: manage.py
core/core/utils/: collections.py  mics.py  settings.py
core/via_praetoria/: asgi.py  urls.py
core/via_praetoria/settings/: __init__.py  base.py  ckeditor.py  custom.py  envvars.py  logging.py  rest_framework.py
core/via_praetoria/settings/templates/: settings.dev.py
main/: admin.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_alter_product_category.py  0002_clientshipaddress.py  0002_product_image.py  0003_rename_created_at_order_date_ordered_and_more.py  0004_cart_order.py
main/models/: handle_order_models.py  product_models.py
main/serializers/: handle_order_serializers.py  product_serializers.py
main/templates/store/: cart.html  checkout.html  dashboard.html  main.html  new_store.html  store.html
main/views/: handle_order_views.py  product_views.py  views.py
shared/: __init__.py  functions.py  permissions.py  serializers.py  views.py
shop/: models.py  views.py
shop/templates/: main.html
static/css/: main.css  store.css
static/js/: cart.js  event-handler.js  user-status.js
via_praetoria/: settings.py  urls.py  wsgi.py
