[tool.poetry]
name = "via-praetoria-project"
version = "0.1.0"
description = ""
authors = ["Mariyan Georgiev <mariqn5000@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "via_praetoria_project"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.6"
django-filter = "^23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
