[tool.poetry]
name = "via-praetoria-project"
version = "0.1.0"
description = ""
authors = ["Mariyan Georgiev <mariqn5000@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "via_praetoria_project"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.6"
django-filter = "^23.2"
django-phonenumber-field = "7.1.0"
django-split-settings = "^1.2.0"
pyyaml = "^6.0.1"
pillow = "^10.0.0"
rest-framework-simplejwt = "^0.0.2"
django-mptt = "^0.14.0"
django-ckeditor = "^6.7.0"
psycopg2-binary = "^2.9.7"
django-admin-rangefilter = "^0.10.0"
django-admin-hstore-widget = "^1.2.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pre-commit = "^3.3.3"
colorlog = "^6.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
